--- a/src/index.css
+++ b/src/index.css
@@ -1,62 +1,71 @@
 @import "tailwindcss";
 
 @font-face {
-    font-family: font1;
-    src: url(../public/fonts/Lausanne-300.woff2);
-}
-@font-face {
-    font-family: font2;
-    src:url(../public/fonts/Lausanne-500.woff2);
+  font-family: font1;
+  src: url(../public/fonts/Lausanne-300.woff2);
 }
 
-html, body {
+@font-face {
+  font-family: font2;
+  src: url(../public/fonts/Lausanne-500.woff2);
+}
+
+* {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  box-sizing: border-box;
 }
-*::selection{
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+*::selection {
   background-color: #D3FD50;
   color: black;
 }
 
 
 
-body{
+body {
   background-image: "src\assets\violet girl.jpg";
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
 }
 
-.moveX{
+.moveX {
   animation: moving;
   animation-timing-function: linear;
   animation-duration: 9s;
   animation-iteration-count: infinite;
-  
+
 }
-.link{
+
+.link {
   overflow: hidden;
 }
 
-.moveLink{
+.moveLink {
   transition: all ease 0.3s;
   opacity: 0;
 }
 
-.link:hover .moveLink{
+.link:hover .moveLink {
   cursor: pointer;
   transition: all ease-in 0.1s;
   opacity: 1;
 }
 
 @keyframes moving {
-  from{
+  from {
     transform: translateX(0%);
   }
-  to{
+
+  to {
     transform: translateX(-100%);
   }
-  
-}
 
+}
